--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -1,9 +1,9 @@
 .page {
   height: 100%;
   font-size: 14px;
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans Narrow", sans-serif;
   line-height: 26px;
-  font-weight: 400;
+  font-weight: 700;
 }
 
 .page__body {
