--- a/source/less/global/fonts.less
+++ b/source/less/global/fonts.less
@@ -1,30 +1,18 @@
-// Raleway
-
 @font-face {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 800;
-  font-display: swap;
-  src:
-    url("../../fonts/Raleway-ExtraBold.woff") format("woff");
-}
-
-// Rubik
-
-@font-face {
-  font-family: "Rubik";
+  font-family: "PT Sans Narrow";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
   src:
-    url("../../fonts/Rubik-Regular.woff") format("woff");
+    url("../../fonts/PTSansNarrow-Regular.ttf") format("ttf");
 }
 
 @font-face {
-  font-family: "Rubik";
-  font-style: normal;
+  font-family: "PT Sans Narrow";
+  font-style: bold;
   font-weight: 700;
   font-display: swap;
   src:
-    url("../../fonts/Rubik-Bold.woff") format("woff");
+    url("../../fonts/PTSansNarrow-Bold.ttf") format("ttf");
 }
+
