--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,23 +1,15 @@
-// color
+//color
+//basic
+@basic-black: #000000;
+@basic-extra-dark: #242424;
+@basic-dark: #aba9a7;
+@basic-neutral: #e5e5e5;
+@basic-extra-light: #f8f5f2;
+@basic-white: #ffffff;
+//status
+//special
+@special: #663d15;
 
-  // basic
-@black: #000000;
-@dark: #444444;
-@white: #ffffff;
-@light: #f0f0f0;
-@gray: #dcdcdc;
-@light-gray: #ebebeb;
-
-  //status
-@success: #08af00;
-@error: #ff3d3d;
-@warning: #fd912e;
-
-  //special
-@yellow-dark: #ffc700;
-@yellow-light: #ffe17f;
-@purple: #af4fff;
-@brown: #64534a;
 
 // Viewports
 @tablet-width: 768px;
